# Aquarium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/meshes/Goldfish/: LISENCE.md
assets/meshes/Shark/: LISENCE.md
shaders/: shader.frag  shader.vert
shaders/boid/: goldfish.frag  goldfish.vert  shark.vert
shaders/compute/: boid_grid_build.comp  boid_grid_clear.comp  boid_simulate.comp
src/: main.cpp  stdafx.h
src/core/: FramePresenter.cpp  FramePresenter.h  Renderer.h  SinglePassRenderer.cpp  SinglePassRenderer.h  Window.cpp  Window.h
src/geometry/: DeviceMesh.cpp  DeviceMesh.h  HostMesh.h  MeshFactory.cpp  MeshFactory.h  ObjLoader.cpp  ObjLoader.h  Vertex.cpp  Vertex.h
src/gui/: GUI.cpp  GUI.h
src/scene/camera/: Camera.h  TrackballCamera.cpp  TrackballCamera.h  TurnTableCamera.cpp  TurnTableCamera.h
src/scene/content/boid/: BoidScene.cpp  BoidScene.h  FishModel.cpp  FishModel.h  SharkModel.cpp  SharkModel.h
src/scene/model/: Model.cpp  Model.h  PlaneModel.cpp  PlaneModel.h  SelectableModel.h  SkyBox.cpp  SkyBox.h  SphereModel.cpp  SphereModel.h
src/scene/physics/: BoidSimulation.cpp  BoidSimulation.h
src/vulkan/: ComputePipeline.h  DescriptorSet.cpp  DescriptorSet.h  FrameBuffer.h  Pipeline.h  RenderPass.h  SwapChain.h  VulkanContext.cpp  VulkanContext.h  VulkanHelper.cpp  VulkanHelper.h
src/vulkan/resources/: Buffer.h  Texture2D.cpp  Texture2D.h  TextureCubemap.cpp  TextureCubemap.h  TextureSampler.h
